# match-lens

./: .gitignore  LICENSE  README.md  install.ps1  package-lock.json  package.json  setup.ps1  vite.config.ts
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  db.rs  events.rs  lcu.rs  lib.rs  main.rs  network.rs  recorder.rs  storage.rs
src/lib/: NetworkDiagnostics.svelte  Settings.svelte  Sidebar.svelte  Timeline.svelte  VideoPlayer.svelte  api.ts
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
